--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_swiper: ^1.1.6
-  http: 0.12.0+4
+  http: ^0.13.4
+  google_maps_flutter:
+  location: ^4.2.0
+  google_maps_webservice: ^0.0.14
+  email_validator: 
+  provider: ^4.3.3
+  intl:
+    
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -46,8 +53,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+     - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
