--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   http: ^0.13.4
   google_maps_flutter:
   location: ^4.2.0
-  google_maps_webservice: ^0.0.14
+  google_maps_webservice: ^0.0.20-nullsafety.5
   email_validator: 
   provider: ^4.3.3
   intl:
@@ -41,11 +41,16 @@ dependencies:
   flutter_slidable: ^0.5.7
   url_launcher: 
   datetime_picker_formfield:
-   
+  flutter_launcher_icons: ^0.8.1
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon.png"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
